# myVideoType

./: .gitignore  CMakeLists.txt  README.md
include/: fundation.hpp  sceneOne.hpp  sceneThree.hpp  sceneTwo.hpp  tools.hpp
src/: CMakeLists.txt  main.cpp  sceneOne.cpp  sceneThree.cpp  sceneTwo.cpp  tools.cpp
